added log in functionality

--- a/client/src/components/navbar/Navbar.css
+++ b/client/src/components/navbar/Navbar.css
@@ -65,11 +65,13 @@
 
 }
 
-.fa-sign-in {
+.fa-sign-in, .fa-sign-out {
 
     margin-right: 10px;
 
 }
+
+
 
 @media screen and (max-width: 600px) {
 
