--- a/client/src/components/navbar/Navbar.css
+++ b/client/src/components/navbar/Navbar.css
@@ -6,6 +6,7 @@
 
 .nav {
 
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: stretch;
@@ -13,6 +14,7 @@
     padding: 0 1rem;
     background-color: #45bce8;
     color: #0c0c04;
+    z-index: 10;
 
 }
 
@@ -57,6 +59,17 @@
 
 }
 
+.cart {
+
+    display: flex;
+    align-items: center;
+    height: 100%;
+    padding: .25rem;
+    color: inherit;
+    text-decoration: none;
+
+}
+
 .fa-times {
 
     position: absolute;
@@ -70,7 +83,6 @@
     margin-right: 10px;
 
 }
-
 
 
 @media screen and (max-width: 600px) {
