--- a/client/src/pages/cart/Cart.css
+++ b/client/src/pages/cart/Cart.css
@@ -1,12 +1,19 @@
+.cart-container {
 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
+}
 
 table {
 
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    top: 50px;
+    margin-bottom: 10px;
     border: 1px solid black;
     border-spacing: 0;
 
@@ -26,33 +33,43 @@ td {
 
     text-align: center;
     width: 50%;
-    padding: 1%
-    
+    padding: 1%;
+
 }
 
 tbody tr:hover {
 
     background-color: #EDEADE;
-    
-}
-
-tbody tr:hover::after {
-
-    content: "Remove?";
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    opacity: 1;
 
 }
 
-tr::after {
+.cost-container {
 
-    opacity: 0;
-    transition: opacity 0.2s;
+    width: 100%;
+    text-align: right;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
 
 }
 
+.cart-container button {
+
+    background-color: #0C0C04;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+
+}
+
+.cart-container button:hover {
+
+    opacity: 0.8;
+
+}
 
 .empty-cart {
 
@@ -60,7 +77,7 @@ tr::after {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    
+
 }
 
 .empty-cart a {
@@ -73,5 +90,20 @@ tr::after {
 .empty-cart a:hover {
 
     text-decoration: underline;
+
+}
+
+#final-message {
+
+    display: none;
+    position: absolute;
+    z-index: 1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border: 1px solid black;
+    box-shadow: 0px 0px 10px #ccc;
 
 }
