--- a/client/src/components/navbar/Navbar.css
+++ b/client/src/components/navbar/Navbar.css
@@ -1,9 +1,3 @@
-.logo {
-
-    font-size: 2rem;
-
-}
-
 .nav {
 
     position: relative;
@@ -14,6 +8,7 @@
     padding: 0 1rem;
     background-color: #45bce8;
     color: #0c0c04;
+    width: 100%;
     z-index: 10;
 
 }
@@ -67,6 +62,7 @@
     padding: .25rem;
     color: inherit;
     text-decoration: none;
+    margin-top: 20%;
 
 }
 
