--- a/client/src/components/Reviews/Reviews.css
+++ b/client/src/components/Reviews/Reviews.css
@@ -1,62 +1,84 @@
 .reviews-container {
+
     padding: 20px;
     background-color: #f9f9f9;
     border-radius: 10px;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+
 }
 
 .review {
+
     margin-bottom: 20px;
+
 }
 
 .review-user {
+
     color: #358ED7;
     font-weight: bold;
     font-size: 14px;
     margin-bottom: 10px;
+
 }
 
 .review-header, .profile{
+
     display: flex;
     align-items: center;
+
 }
 
 .left-header, .profile {
+
     display:flex;
     align-items: center;
+
 }
 
 .fa-user {
+
     margin-right: 5px;
+
 }
 
 .review-title {
+
     margin-right: 10px;
     font-size: 18px;
     margin-bottom: 10px;
+
 }
 
 .review-body {
+
     font-size: 14px;
     margin-bottom: 10px;
     line-height: 1.5;
+
 }
 
 .review-divider {
+
     border-top: 1px solid #ccc;
     margin-top: 10px;
     margin-bottom: 10px;
+
 }
 
 .colored-star {
+
     color: #FF9529;
+
 }
 
 .uncolored-star {
+
     color: #ccc;
+
 }
 
-.reviews-container button {
+.reviews-container button, select {
 
     background-color: #0C0C04;
     color: white;
@@ -71,4 +93,37 @@
 
     opacity: 0.8;
 
+}
+
+.edit-container {
+
+    display: flex;
+    flex-direction: column;
+
+}
+
+.edit-buttons button {
+    
+    margin: 8px 4px;
+
+}
+
+.edit-title {
+
+    display: flex;
+
+}
+
+.edit-title > * {
+
+    margin: 8px 16px 8px 0;
+
+}
+
+textarea {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+
+    width: 100%;
 }
