--- a/client/src/pages/cart/Cart.css
+++ b/client/src/pages/cart/Cart.css
@@ -97,6 +97,7 @@ tbody tr:hover {
 
     display: none;
     position: absolute;
+    text-align: center;
     z-index: 1;
     top: 50%;
     left: 50%;
