--- a/client/src/pages/home/Home.css
+++ b/client/src/pages/home/Home.css
@@ -19,6 +19,7 @@
 }
 
 .grid-container {
+
     display: grid;
     gap: 5fr 5fr;
     grid-template-columns: 40fr 40fr;
@@ -54,10 +55,17 @@
 
 @media (max-width: 600px) {
 
-    .shop-portion {
+    .grid-container {
         
+        display: flex;
         flex-direction: column;
         align-items: center;
+
+    }
+
+    .grid-item {
+
+        margin: 10px;
 
     }
 
