edited media queries

--- a/client/src/pages/product/Product.css
+++ b/client/src/pages/product/Product.css
@@ -124,7 +124,7 @@
 
 }
 
-@media (max-width: 600px) {
+@media all and (max-device-width: 600px) {
 
     .product-container {
         flex-direction: column-reverse;
