--- a/client/src/pages/about/About.css
+++ b/client/src/pages/about/About.css
@@ -46,7 +46,7 @@
 
 }
 
-@media all and (max-device-width: 600px) {
+@media all and (max-device-width: 600px), (max-width: 600px) {
 
     .about-container {
         flex-direction: column-reverse;
