--- a/client/src/components/navbar/Navbar.css
+++ b/client/src/components/navbar/Navbar.css
@@ -81,7 +81,7 @@
 }
 
 
-@media all and (max-device-width: 600px) {
+@media all and (max-device-width: 600px), (max-width: 600px) {
 
     .nav ul {
 
