--- a/client/src/pages/home/Home.css
+++ b/client/src/pages/home/Home.css
@@ -53,7 +53,7 @@
 }
 
 
-@media all and (max-device-width: 600px) {
+@media all and (max-device-width: 850px), (max-width: 850px)  {
 
     .grid-container {
         
