--- a/client/src/components/Reviews/Reviews.css
+++ b/client/src/components/Reviews/Reviews.css
@@ -128,3 +128,13 @@ textarea {
     width: 100%;
 
 }
+
+@media all and (max-device-width: 850px), (max-width: 850px)  {
+
+    .edit-title {
+
+        flex-direction: column;
+    
+    }
+
+}
