--- a/client/src/pages/home/Home.css
+++ b/client/src/pages/home/Home.css
@@ -52,6 +52,11 @@
 
 }
 
+.home img {
+    max-width:100%;
+    max-height:100%;
+}
+
 
 @media all and (max-device-width: 850px), (max-width: 850px)  {
 
